# fluxpath-installer

./: LICENSE  README.md  VERSION  __init__.py  build-zip.sh  discover-integrate.sh  fluxpath-install.sh  fluxpath-installer.sh  fluxpath-precheck.sh  install.sh  mmu_autodiscover_report.txt  mmu_integration_stub.py  prepare_commit.sh  pyproject.toml  server.py
config/: fluxpath_config.json
core/: instances.py
docs/: API.md  CHANGELOG.md  MMU.md  QUICKSTART.md  README.md  ROADMAP.md  SLICER.md  WEBUI.md
fluxpath/: api.py  server.py
fp_core/: __init__.py  config.py  installer_bridge.py  instances.py  klipper.py  systemd.py  utils.py
klipper/: fluxpath_mmu_macros.cfg
mmu/: mmu_calibration.cfg  mmu_calibration_wizard.cfg  mmu_diagnostics.cfg  mmu_lane_test_wizard.cfg  mmu_load.cfg  mmu_main.cfg  mmu_preload.cfg  mmu_primitives.cfg  mmu_sensors.cfg  mmu_toolchange.cfg  mmu_ui.cfg  mmu_unload.cfg  mmu_vars.cfg
scripts/: FluxPath_Installer_v0.9.1-fixed.sh  bootstrap.sh  bootstrap_installer.sh  clean_fluxpath_scripts.sh  config_editor.sh  enable_mmu_and_slicer_integration.sh  fluxpath_build_release.sh  fluxpath_cli.py  fluxpath_config_doctor.sh  fluxpath_full_check.sh  fluxpath_full_install.sh  fluxpath_moonraker_sanity.sh  fluxpath_orca_post.py  fluxpath_release_manager.sh  fluxpath_sandbox.sh  fluxpath_system_check.sh  fluxpath_updater.sh  generate_fluxpath_docs.sh  hardware_test.sh  install_fluxpath.sh  install_or_update_fluxpath.sh  printer_tools.sh  restructure_fluxpath_repo.sh  set_fluxpath_config.sh  setup_fluxpath_backend.sh  test_regex.sh
(+21 files in other folders)
